--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "jspdf-autotable": "^5.0.2",
     "lucide-react": "^0.263.1",
     "react": "^18.2.0",
+    "react-confetti": "^6.4.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^7.9.6"
+    "react-router-dom": "^7.9.6",
+    "react-use": "^17.6.0"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
